--- a/src/components/announcement.scss
+++ b/src/components/announcement.scss
@@ -68,3 +68,45 @@
     }
   }
 }
+.GlobalBanner {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding: 5px 20px;
+  height: 200px;
+  border: 1px lightgrey solid;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-image: url("https://cf.bstatic.com/static/img/genius-banner-world-bg/2b5cdbad7b92073bc396b8b59d0bb421b3a01cba.png");
+  img {
+    display: flex;
+    width: 180px;
+  }
+  .BannerInfoDes {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    .Bannerbtn {
+      display: flex;
+      gap: 10px;//登入 註冊btn 有間距
+      button {
+        padding: 8px 15px;
+        border-radius: 2px;
+        color: rgb(53, 164, 127);
+        border: 1px rgb(53, 164, 127) solid;
+        background-color: white;
+        cursor: pointer;
+        &:hover {
+          background-color: rgba(53, 164, 127, 0.1);
+        }
+      }
+      button:last-child {
+        //做一下差別註冊不要有外匡
+        //last-child是指btn的最後一個物件概念
+        //這邊就兩個 登入與註冊 登入就firse-child註冊就last-child
+        border: none;
+      }
+    }
+  }
+}
