--- a/src/pages/hotelsList.scss
+++ b/src/pages/hotelsList.scss
@@ -31,13 +31,12 @@
   flex-direction: column;
   font-size: 12px;
   color: rgba(0, 0, 0, 0.7);//這個是label顏色讓他稍為不要那麼黑
-  .searchInput { //這邊配合上面只要是input輸入欄
-    //包括dates,conditions,limitPrice,destination都是input輸入欄
+  .searchInput {
     border: none;
-    padding: 10px 5px; //並幫他們設定統一樣式
+    padding: 10px 5px;
     border-radius: 1px;
   }
-  .dates {//dates這邊是用div 來排版所以底色讓他跟input一樣都白色
+  .dates {
     background-color: #fff;
     border: none;
     border-radius: 2px;
@@ -48,9 +47,42 @@
     font-size: 20px;
     color: #fff;
     background-color: rgb(53, 164, 127);
-    cursor: pointer;
-    &:hover{
-      background-color: rgb(15, 130, 92);
+  }
+}
+
+.listItemLimitPrice {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  .searchInput {
+    border: 1px solid gray;
+  }
+}
+
+.listItmConditions {
+  display: flex;
+  background-color: #fff;
+  padding: 10px 5px;
+}
+
+
+
+
+.resultTitle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  .map{
+    padding: 20px 25px;
+    background-color: #000;
+    border-radius: 2px;
+    background-image: url("https://cf.bstatic.com/psb/capla/static/media/map-entry-point.6b01012a.png");
+    button{
+      padding: 8px 15px;
+      border: none;
+      color: white;
+      background-color: var(--primary-color);
     }
   }
 }
