--- a/client/src/components/navbar.scss
+++ b/client/src/components/navbar.scss
@@ -74,6 +74,10 @@
         &:hover {
           background-color: rgba(255, 255, 255, 0.14);
         }
+        .active {
+          border: white 1px solid;
+          background-color: white;
+      }
       }
 
     }
